--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     <div id="root" ></div>
     <script src="https://unpkg.com/kursor"></script>
     <script>
-        new kursor({
-            type: 1,
-            removeDefaultCursor: false,
-        })
+        <!-- new kursor({ -->
+            <!-- type: 1, -->
+            <!-- removeDefaultCursor: false, -->
+        <!-- }) -->
     </script>
   </body>
 </html>
